# docvision

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docker/: Dockerfile  docker-compose.yml
src/docvision/: __init__.py  config.py
src/docvision/core/: __init__.py  pipeline.py
src/docvision/generation/: llm_client.py
src/docvision/ingestion/: __init__.py  pdf_loader.py  text_chunker.py
src/docvision/retrieval/: __init__.py  hybrid_search.py  keyword_store.py  vector_store.py
tests/: conftest.py  test_hello.py  test_ingestion.py
